--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,11 @@
-<my-app>loading</my-app>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Welcome to SPSA</title>
+<meta name="description" content="" />"
+</head>
+<body>
+	<my-app>loading</my-app>
+</body>
+</html>
