Home page ready

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,10 @@
 <head>
 <meta charset="utf-8">
 <title>Welcome to SPSA</title>
-<meta name="description" content="" />"
+<meta name="description" content="" />
 </head>
 <body>
 	<my-app>loading</my-app>
+   
 </body>
 </html>
